# node-desktop

./: .gitignore  CMakeLists.txt  LICENSE  README.md  binding.gyp  binding.linux.gyp  package.json
examples/RedditGTK/: index.js
mac_src/: index.js  loop.js
mac_src/definitions/: definitions.js
mac_src/definitions/components/: App.js  Box.js  Button.js  Widget.js  Window.js
native/: loop.cc  loop.h
react/: components.js  index.js
scripts/: build.sh
src/: exports.js  index.js  native-test.js
src/definitions/: definitions.js
src/definitions/components/: App.js  Box.js  Button.js  ButtonBox.js  Entry.js  HeaderBar.js  Label.js  ListBox.js  ScrolledWindow.js  Widget.js  Window.js
